# num-

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  Readme.md
.github/workflows/: cmake.yml
fortran/: matrix.f90
src/: benchmark.cpp  io.hpp  linalg.hpp  linear.hpp  matrix.hpp  run.cpp
tests/: linalg_test.cpp  linear_test.cpp  matrix_test.cpp
